--- a/lispref/anti.texi
+++ b/lispref/anti.texi
@@ -100,7 +100,7 @@ and background colors, so you cannot specify different colors for
 the scroll bars.
 
 @item
-For simplicity, all @sc{ascii} characters now have the same height and width.
+For simplicity, all @acronym{ASCII} characters now have the same height and width.
 (Certain characters, such as Chinese characters, always have twice
 the standard width.)  All characters are created equal.
 
@@ -292,4 +292,9 @@ and allied functions.
 @item
 @code{file-attributes} returns the file size and the file inode number
 only as a simple integer.
+Also @acronym{UID} and @acronym{GID} are always returned as integers.
 @end itemize
+
+@ignore
+   arch-tag: 1d0ef137-2bad-430e-ae8e-d820d569b5a6
+@end ignore
