--- a/lispref/streams.texi
+++ b/lispref/streams.texi
@@ -361,7 +361,9 @@ The output characters are inserted into the buffer that @var{marker}
 points into, at the marker position.  The marker position advances as
 characters are inserted.  The value of point in the buffer has no effect
 on printing when the stream is a marker, and this kind of printing
-does not move point.
+does not move point (except that if the marker points at or before the
+position of point, point advances with the surrounding text, as
+usual).
 
 @item @var{function}
 @cindex function output stream
@@ -685,6 +687,13 @@ The value of this variable is the default output stream---the stream
 that print functions use when the @var{stream} argument is @code{nil}.
 @end defvar
 
+@defvar print-quoted
+If this is non-@code{nil}, that means to print quoted forms using
+abbreviated reader syntax.  @code{(quote foo)} prints as @code{'foo},
+@code{(function foo)} as @code{#'foo}, and backquoted forms print
+using modern backquote syntax.
+@end defvar
+
 @defvar print-escape-newlines
 @cindex @samp{\n} in print
 @cindex escape characters
@@ -721,24 +730,24 @@ In the second expression, the local binding of
 @end defvar
 
 @defvar print-escape-nonascii
-If this variable is non-@code{nil}, then unibyte non-@sc{ascii}
+If this variable is non-@code{nil}, then unibyte non-@acronym{ASCII}
 characters in strings are unconditionally printed as backslash sequences
 by the print functions @code{prin1} and @code{print} that print with
 quoting.
 
-Those functions also use backslash sequences for unibyte non-@sc{ascii}
+Those functions also use backslash sequences for unibyte non-@acronym{ASCII}
 characters, regardless of the value of this variable, when the output
 stream is a multibyte buffer or a marker pointing into one.
 @end defvar
 
 @defvar print-escape-multibyte
-If this variable is non-@code{nil}, then multibyte non-@sc{ascii}
+If this variable is non-@code{nil}, then multibyte non-@acronym{ASCII}
 characters in strings are unconditionally printed as backslash sequences
 by the print functions @code{prin1} and @code{print} that print with
 quoting.
 
 Those functions also use backslash sequences for multibyte
-non-@sc{ascii} characters, regardless of the value of this variable,
+non-@acronym{ASCII} characters, regardless of the value of this variable,
 when the output stream is a unibyte buffer or a marker pointing into
 one.
 @end defvar
@@ -770,6 +779,14 @@ parentheses and brackets when printed.  Any list or vector at a depth
 exceeding this limit is abbreviated with an ellipsis.  A value of
 @code{nil} (which is the default) means no limit.
 @end defvar
+
+@defopt eval-expression-print-length
+@defoptx eval-expression-print-level
+These are the values for @code{print-length} and @code{print-level}
+used by @code{eval-expression}, and thus, indirectly, by many
+interactive evaluation commands (@pxref{Lisp Eval,, Evaluating
+Emacs-Lisp Expressions, emacs, The GNU Emacs Manual}).
+@end defopt
 
   These variables are used for detecting and reporting circular
 and shared structure---but they are only defined in Emacs 21.
@@ -803,3 +820,7 @@ This variable holds a vector used internally by printing to implement
 the @code{print-circle} feature.  You should not use it except
 to bind it to @code{nil} when you bind @code{print-continuous-numbering}.
 @end defvar
+
+@ignore
+   arch-tag: 07636b8c-c4e3-4735-9e06-2e864320b434
+@end ignore
